--- a/4-Termo/LP_II/2_bimestre/Trabalho/PROJETO2BIM/back/package.json
+++ b/4-Termo/LP_II/2_bimestre/Trabalho/PROJETO2BIM/back/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js localhost 3000"
+    "start": "nodemon src/index.js localhost 3000"
   },
   "keywords": [],
   "author": "",
